# langchain-sail

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
langchain_sail/: __init__.py  agent.py  prompts.py  toolkit.py  tools.py  utilities.py
tests/integration_tests/: test_sail_sql.py
tests/unit_tests/: test_sail_sql.py
